// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layer 1 — Hub render across prop matrix > renders identically: default — Canvas iframe, no student, no teacher mode (snapshot) 1`] = `
"<div class="bl-root fixed inset-0 z-[200] bg-slate-100 flex flex-col animate-in fade-in duration-300" role="dialog" aria-modal="true" aria-labelledby="behavior-lens-dialog-title" aria-describedby="behavior-lens-dialog-subtitle" tabindex="-1">
<div id="behavior-lens-live-status" role="status" aria-live="polite" aria-atomic="true" class="bl-sr-only">
</div>
<div class="bg-white/80 backdrop-blur-md border-b border-slate-200 shadow-sm shrink-0 z-10">
<div class="bl-app-header px-3 sm:px-6 py-3 sm:py-4 flex flex-wrap items-center justify-between gap-2">
<div class="flex items-center gap-3">
<div class="bg-gradient-to-br from-indigo-700 to-purple-700 p-2 rounded-xl text-white shadow-md">
<span class="lucide-icon" data-icon="Eye">
</span>
</div>
<div>
<h2 id="behavior-lens-dialog-title" class="text-xl font-black text-slate-800">BehaviorLens</h2>
<p id="behavior-lens-dialog-subtitle" class="text-xs text-slate-600">Behavioral Observation &amp; Analysis</p>
</div>
</div>
<button aria-label="Close BehaviorLens" class="shrink-0 ms-auto min-w-11 min-h-11 p-2 rounded-full text-slate-600 hover:bg-slate-100 transition-colors">
<span class="lucide-icon" data-icon="X">
</span>
</button>
<div class="w-full flex flex-wrap items-center gap-2">
<div class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border bg-slate-50 border-slate-200 text-slate-600" title="Canvas environment — local storage only">💾 Local only</div>
<button aria-label="AI is off — click to enable" aria-pressed="false" class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-slate-50 border-slate-300 text-slate-600 hover:bg-slate-100" title="AI OFF — no student data leaves this browser. Click to enable.">🤖 AI: OFF</button>
<button aria-label="Family Mode" aria-pressed="false" class="px-3 py-1.5 rounded-full text-xs font-bold transition-all border bg-white text-slate-600 border-slate-200 hover:border-blue-600 hover:text-blue-500">👨‍👩‍👧 Family</button>
</div>
</div>
</div>
<div data-bl-panel-content="true" tabindex="-1" class="flex-1 min-h-0 overflow-y-auto p-3 sm:p-6">
<div class="max-w-4xl mx-auto space-y-5" data-bl-today="true">
<nav aria-label="Behavior Lens workspace" class="flex flex-wrap gap-2 mb-5">
<button type="button" aria-current="page" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-indigo-100 text-indigo-900">Today</button>
<button type="button" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-white border border-slate-300 text-slate-700">All tools</button>
</nav>
<h2 class="text-xl font-bold text-slate-900">Choose a student to start</h2>
<div id="bl-today-setup">
<div class="mb-6 bg-white rounded-xl border border-slate-400 p-4 shadow-sm">
<label class="block text-xs font-bold text-slate-600 mb-2 uppercase tracking-wide">👤 Select Student</label>
<div class="flex items-center gap-2 mt-2 mb-1">
<span class="text-[11px] font-bold text-slate-600 uppercase tracking-wide">Your Role:</span>
<button aria-label="Use teacher view" aria-pressed="false" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-white border-slate-200 text-slate-600 hover:border-slate-300">👩‍🏫 Teacher</button>
<button aria-label="Use family view" aria-pressed="true" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-emerald-100 border-emerald-400 text-emerald-700">👪 Parent</button>
<button aria-label="Use specialist view" aria-pressed="false" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-white border-slate-200 text-slate-600 hover:border-slate-300">📊 BCBA / Specialist</button>
</div>
<div class="bg-indigo-50 p-4 rounded-xl border border-indigo-100">
<div class="flex gap-2 mb-3">
<select aria-label="Pick codename adjective" class="w-1/2 p-2 rounded-lg border border-indigo-600 text-indigo-900 font-bold text-sm focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer bg-white">
<option value="" selected="">— Adjective —</option>
</select>
<select aria-label="Pick codename animal" class="w-1/2 p-2 rounded-lg border border-indigo-600 text-indigo-900 font-bold text-sm focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer bg-white">
<option value="" selected="">— Animal —</option>
</select>
</div>
<div class="flex items-center justify-between bg-white p-3 rounded-xl shadow-sm border border-indigo-100">
<div class="text-xl font-black text-indigo-600 tracking-tight truncate me-2">Pick a codename...</div>
<button aria-label="Randomize Name" class="p-2 bg-indigo-100 text-indigo-800 rounded-full hover:bg-indigo-200 hover:scale-110 transition-all shrink-0" title="Randomize">🎲</button>
</div>
<details class="mt-4 pt-4 border-t border-indigo-100">
<summary class="min-h-11 py-2 text-sm font-bold text-indigo-900">Practice with sample data</summary>
<div class="flex items-center gap-1.5 mb-2">
<span class="text-[11px]">⚙️</span>
<span class="text-[11px] font-black text-indigo-700 uppercase tracking-wider">Sandbox Config</span>
</div>
<div class="grid grid-cols-2 gap-2 mb-3">
<div>
<label class="text-[11px] font-bold text-indigo-700 block mb-0.5">📅 Period</label>
<select aria-label="Sandbox period in days" class="w-full px-2 py-1.5 border border-indigo-600 rounded-lg text-xs bg-white text-indigo-800 font-medium">
<option value="7">7 days</option>
<option value="14" selected="">14 days</option>
<option value="30">30 days</option>
<option value="60">60 days</option>
<option value="90">90 days</option>
</select>
</div>
<div>
<label class="text-[11px] font-bold text-indigo-700 block mb-0.5">📝 Entries</label>
<select aria-label="Sandbox entry count" class="w-full px-2 py-1.5 border border-indigo-600 rounded-lg text-xs bg-white text-indigo-800 font-medium">
<option value="10">10 entries</option>
<option value="15">15 entries</option>
<option value="25" selected="">25 entries</option>
<option value="40">40 entries</option>
<option value="60">60 entries</option>
</select>
</div>
</div>
<button aria-label="Load Demo Student" class="w-full py-2.5 bg-gradient-to-r from-emerald-700 to-teal-700 hover:from-emerald-800 hover:to-teal-800 text-white rounded-xl font-bold text-sm shadow outline-none focus:ring-2 focus:ring-emerald-300 transition-all flex justify-center items-center gap-2">
<span>🚀</span>
<span>Load Demo (14d / 25 entries)</span>
</button>
</details>
</div>
</div>
</div>
<details class="rounded-xl border border-slate-300 bg-white p-4">
<summary class="min-h-11 py-2 text-sm font-bold text-slate-800">Workspace files and settings</summary>
<p role="status" class="text-sm text-slate-700 my-2">Changes save automatically in this browser. Download a backup to keep a file copy.</p>
<div class="flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Download backup</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Load workspace from file</button>
</div>
<input type="file" accept=".json" aria-label="Load BehaviorLens workspace JSON file" class="hidden"/>
</details>
<p class="text-sm text-slate-700">Find specialist tools, learning resources, and practice scenarios in All tools.</p>
</div>
</div>
</div>"
`;

exports[`layer 1 — Hub render across prop matrix > renders identically: standalone (non-Canvas) — cloud-sync path enabled (snapshot) 1`] = `
"<div class="bl-root fixed inset-0 z-[200] bg-slate-100 flex flex-col animate-in fade-in duration-300" role="dialog" aria-modal="true" aria-labelledby="behavior-lens-dialog-title" aria-describedby="behavior-lens-dialog-subtitle" tabindex="-1">
<div id="behavior-lens-live-status" role="status" aria-live="polite" aria-atomic="true" class="bl-sr-only">
</div>
<div class="bg-white/80 backdrop-blur-md border-b border-slate-200 shadow-sm shrink-0 z-10">
<div class="bl-app-header px-3 sm:px-6 py-3 sm:py-4 flex flex-wrap items-center justify-between gap-2">
<div class="flex items-center gap-3">
<div class="bg-gradient-to-br from-indigo-700 to-purple-700 p-2 rounded-xl text-white shadow-md">
<span class="lucide-icon" data-icon="Eye">
</span>
</div>
<div>
<h2 id="behavior-lens-dialog-title" class="text-xl font-black text-slate-800">BehaviorLens</h2>
<p id="behavior-lens-dialog-subtitle" class="text-xs text-slate-600">Behavioral Observation &amp; Analysis</p>
</div>
</div>
<button aria-label="Close BehaviorLens" class="shrink-0 ms-auto min-w-11 min-h-11 p-2 rounded-full text-slate-600 hover:bg-slate-100 transition-colors">
<span class="lucide-icon" data-icon="X">
</span>
</button>
<div class="w-full flex flex-wrap items-center gap-2">
<div role="status" aria-label="Cloud sync status" class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border transition-all bg-slate-50 border-slate-200 text-slate-600" title="Cloud sync idle">💾 Local</div>
<button aria-label="AI is off — click to enable" aria-pressed="false" class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-slate-50 border-slate-300 text-slate-600 hover:bg-slate-100" title="AI OFF — no student data leaves this browser. Click to enable.">🤖 AI: OFF</button>
<button aria-label="Family Mode" aria-pressed="false" class="px-3 py-1.5 rounded-full text-xs font-bold transition-all border bg-white text-slate-600 border-slate-200 hover:border-blue-600 hover:text-blue-500">👨‍👩‍👧 Family</button>
</div>
</div>
</div>
<div data-bl-panel-content="true" tabindex="-1" class="flex-1 min-h-0 overflow-y-auto p-3 sm:p-6">
<div class="max-w-4xl mx-auto space-y-5" data-bl-today="true">
<nav aria-label="Behavior Lens workspace" class="flex flex-wrap gap-2 mb-5">
<button type="button" aria-current="page" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-indigo-100 text-indigo-900">Today</button>
<button type="button" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-white border border-slate-300 text-slate-700">All tools</button>
</nav>
<h2 class="text-xl font-bold text-slate-900">Choose a student to start</h2>
<div id="bl-today-setup">
<div class="mb-6 bg-white rounded-xl border border-slate-400 p-4 shadow-sm">
<label class="block text-xs font-bold text-slate-600 mb-2 uppercase tracking-wide">👤 Select Student</label>
<div class="flex items-center gap-2 mt-2 mb-1">
<span class="text-[11px] font-bold text-slate-600 uppercase tracking-wide">Your Role:</span>
<button aria-label="Use teacher view" aria-pressed="false" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-white border-slate-200 text-slate-600 hover:border-slate-300">👩‍🏫 Teacher</button>
<button aria-label="Use family view" aria-pressed="true" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-emerald-100 border-emerald-400 text-emerald-700">👪 Parent</button>
<button aria-label="Use specialist view" aria-pressed="false" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-white border-slate-200 text-slate-600 hover:border-slate-300">📊 BCBA / Specialist</button>
</div>
<div class="bg-indigo-50 p-4 rounded-xl border border-indigo-100">
<div class="flex gap-2 mb-3">
<select aria-label="Pick codename adjective" class="w-1/2 p-2 rounded-lg border border-indigo-600 text-indigo-900 font-bold text-sm focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer bg-white">
<option value="" selected="">— Adjective —</option>
</select>
<select aria-label="Pick codename animal" class="w-1/2 p-2 rounded-lg border border-indigo-600 text-indigo-900 font-bold text-sm focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer bg-white">
<option value="" selected="">— Animal —</option>
</select>
</div>
<div class="flex items-center justify-between bg-white p-3 rounded-xl shadow-sm border border-indigo-100">
<div class="text-xl font-black text-indigo-600 tracking-tight truncate me-2">Pick a codename...</div>
<button aria-label="Randomize Name" class="p-2 bg-indigo-100 text-indigo-800 rounded-full hover:bg-indigo-200 hover:scale-110 transition-all shrink-0" title="Randomize">🎲</button>
</div>
<details class="mt-4 pt-4 border-t border-indigo-100">
<summary class="min-h-11 py-2 text-sm font-bold text-indigo-900">Practice with sample data</summary>
<div class="flex items-center gap-1.5 mb-2">
<span class="text-[11px]">⚙️</span>
<span class="text-[11px] font-black text-indigo-700 uppercase tracking-wider">Sandbox Config</span>
</div>
<div class="grid grid-cols-2 gap-2 mb-3">
<div>
<label class="text-[11px] font-bold text-indigo-700 block mb-0.5">📅 Period</label>
<select aria-label="Sandbox period in days" class="w-full px-2 py-1.5 border border-indigo-600 rounded-lg text-xs bg-white text-indigo-800 font-medium">
<option value="7">7 days</option>
<option value="14" selected="">14 days</option>
<option value="30">30 days</option>
<option value="60">60 days</option>
<option value="90">90 days</option>
</select>
</div>
<div>
<label class="text-[11px] font-bold text-indigo-700 block mb-0.5">📝 Entries</label>
<select aria-label="Sandbox entry count" class="w-full px-2 py-1.5 border border-indigo-600 rounded-lg text-xs bg-white text-indigo-800 font-medium">
<option value="10">10 entries</option>
<option value="15">15 entries</option>
<option value="25" selected="">25 entries</option>
<option value="40">40 entries</option>
<option value="60">60 entries</option>
</select>
</div>
</div>
<button aria-label="Load Demo Student" class="w-full py-2.5 bg-gradient-to-r from-emerald-700 to-teal-700 hover:from-emerald-800 hover:to-teal-800 text-white rounded-xl font-bold text-sm shadow outline-none focus:ring-2 focus:ring-emerald-300 transition-all flex justify-center items-center gap-2">
<span>🚀</span>
<span>Load Demo (14d / 25 entries)</span>
</button>
</details>
</div>
</div>
</div>
<details class="rounded-xl border border-slate-300 bg-white p-4">
<summary class="min-h-11 py-2 text-sm font-bold text-slate-800">Workspace files and settings</summary>
<p role="status" class="text-sm text-slate-700 my-2">Changes save automatically in this browser. Download a backup to keep a file copy.</p>
<div class="flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Download backup</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Load workspace from file</button>
</div>
<input type="file" accept=".json" aria-label="Load BehaviorLens workspace JSON file" class="hidden"/>
</details>
<p class="text-sm text-slate-700">Find specialist tools, learning resources, and practice scenarios in All tools.</p>
</div>
</div>
</div>"
`;

exports[`layer 1 — Hub render across prop matrix > renders identically: teacher mode + standalone + named student (snapshot) 1`] = `
"<div class="bl-root fixed inset-0 z-[200] bg-slate-100 flex flex-col animate-in fade-in duration-300" role="dialog" aria-modal="true" aria-labelledby="behavior-lens-dialog-title" aria-describedby="behavior-lens-dialog-subtitle" tabindex="-1">
<div id="behavior-lens-live-status" role="status" aria-live="polite" aria-atomic="true" class="bl-sr-only">
</div>
<div class="bg-white/80 backdrop-blur-md border-b border-slate-200 shadow-sm shrink-0 z-10">
<div class="bl-app-header px-3 sm:px-6 py-3 sm:py-4 flex flex-wrap items-center justify-between gap-2">
<div class="flex items-center gap-3">
<div class="bg-gradient-to-br from-indigo-700 to-purple-700 p-2 rounded-xl text-white shadow-md">
<span class="lucide-icon" data-icon="Eye">
</span>
</div>
<div>
<h2 id="behavior-lens-dialog-title" class="text-xl font-black text-slate-800">BehaviorLens</h2>
<p id="behavior-lens-dialog-subtitle" class="text-xs text-slate-600">Behavioral Observation &amp; Analysis</p>
</div>
</div>
<button aria-label="Close BehaviorLens" class="shrink-0 ms-auto min-w-11 min-h-11 p-2 rounded-full text-slate-600 hover:bg-slate-100 transition-colors">
<span class="lucide-icon" data-icon="X">
</span>
</button>
<div class="w-full flex flex-wrap items-center gap-2">
<div role="status" aria-label="Cloud sync status" class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border transition-all bg-slate-50 border-slate-200 text-slate-600" title="Cloud sync idle">💾 Local</div>
<button aria-label="AI is off — click to enable" aria-pressed="false" class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-slate-50 border-slate-300 text-slate-600 hover:bg-slate-100" title="AI OFF — no student data leaves this browser. Click to enable.">🤖 AI: OFF</button>
<button aria-label="Family Mode" aria-pressed="false" class="px-3 py-1.5 rounded-full text-xs font-bold transition-all border bg-white text-slate-600 border-slate-200 hover:border-blue-600 hover:text-blue-500">👨‍👩‍👧 Family</button>
</div>
</div>
</div>
<div data-bl-panel-content="true" tabindex="-1" class="flex-1 min-h-0 overflow-y-auto p-3 sm:p-6">
<div class="max-w-4xl mx-auto space-y-5" data-bl-today="true">
<nav aria-label="Behavior Lens workspace" class="flex flex-wrap gap-2 mb-5">
<button type="button" aria-current="page" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-indigo-100 text-indigo-900">Today</button>
<button type="button" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-white border border-slate-300 text-slate-700">All tools</button>
</nav>
<header class="flex flex-wrap items-end justify-between gap-3">
<div>
<p class="text-sm text-slate-700">Student workspace</p>
<h2 class="text-2xl font-bold text-slate-900">Eagle</h2>
</div>
<div class="flex flex-wrap gap-2 items-end">
<button type="button" aria-expanded="false" aria-controls="bl-today-setup" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Student and role settings</button>
</div>
</header>
<section class="rounded-xl border border-indigo-300 bg-indigo-50 p-4 sm:p-5 space-y-3" aria-labelledby="bl-getting-started" data-bl-getting-started="true">
<div class="flex flex-wrap items-center justify-between gap-2">
<h3 id="bl-getting-started" class="text-lg font-bold text-indigo-950">Start with one observation</h3>
<button type="button" class="min-h-11 px-2 text-sm text-indigo-900 underline">Skip guide</button>
</div>
<p class="text-sm text-indigo-950" role="status">1. Student selected · 2. Add data · 3. Preview your review</p>
<p class="text-sm text-indigo-950">A context note captures what happened before, what you observed, and what happened after. No target setup or AI is required.</p>
<div class="flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-indigo-400 bg-white px-4 py-2 text-sm font-bold text-indigo-900">Record an observation</button>
<button type="button" class="min-h-11 rounded-lg border border-indigo-400 bg-white px-4 py-2 text-sm font-bold text-indigo-900">Import existing data</button>
<button type="button" class="min-h-11 rounded-lg border border-indigo-400 bg-white px-4 py-2 text-sm font-bold text-indigo-900">Explore an example</button>
</div>
<p class="text-sm text-indigo-950">For systematic measurement, define a target below: count how often, time how long, time from a cue, or sample intervals. Example data opens in a separate practice workspace.</p>
</section>
<section class="rounded-xl border border-slate-300 bg-white p-4 sm:p-5" aria-labelledby="bl-today-record">
<h3 id="bl-today-record" class="text-lg font-bold text-slate-900">Record what happened today</h3>
<p class="mt-2 text-sm text-slate-700">Capture what you saw and heard. You can review patterns and possible explanations later.</p>
<div class="mt-4 flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg bg-indigo-700 px-4 py-2 text-sm font-bold text-white hover:bg-indigo-800">Add observation</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Start or resume timed observation</button>
</div>
<p class="mt-3 text-sm text-slate-700">Timed recording also lets you resume a saved recording draft.</p>
</section>
<section class="rounded-xl border border-slate-300 bg-white p-4 sm:p-5" aria-labelledby="bl-today-targets">
<div class="flex flex-col sm:flex-row sm:items-start justify-between gap-3">
<div class="min-w-0 flex-1">
<h3 id="bl-today-targets" class="text-base font-bold text-slate-900">What are you observing?</h3>
<p class="mt-1 text-sm text-slate-700 break-words">Define a target once, then use it in observations and review.</p>
</div>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Define a target</button>
</div>
</section>
<section class="rounded-xl border border-slate-300 bg-white p-4 sm:p-5" aria-labelledby="bl-today-review">
<div class="flex flex-wrap items-center justify-between gap-3">
<h3 id="bl-today-review" class="text-base font-bold text-slate-900">Review and follow through</h3>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Review observations</button>
</div>
<p class="mt-2 text-sm text-slate-700">Your observations will appear here. A context note is a useful place to start.</p>
<div class="mt-4 flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Work on a support plan</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Prepare a progress review</button>
</div>
</section>
<details class="rounded-xl border border-slate-300 bg-white p-4">
<summary class="min-h-11 py-2 text-sm font-bold text-slate-800">Workspace files and settings</summary>
<p role="status" class="text-sm text-slate-700 my-2">Changes save automatically in this browser. Download a backup to keep a file copy.</p>
<div class="flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Download backup</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Load workspace from file</button>
</div>
<input type="file" accept=".json" aria-label="Load BehaviorLens workspace JSON file" class="hidden"/>
</details>
<p class="text-sm text-slate-700">Find specialist tools, learning resources, and practice scenarios in All tools.</p>
</div>
</div>
</div>"
`;

exports[`layer 1 — Hub render across prop matrix > renders identically: teacher mode in Canvas iframe (snapshot) 1`] = `
"<div class="bl-root fixed inset-0 z-[200] bg-slate-100 flex flex-col animate-in fade-in duration-300" role="dialog" aria-modal="true" aria-labelledby="behavior-lens-dialog-title" aria-describedby="behavior-lens-dialog-subtitle" tabindex="-1">
<div id="behavior-lens-live-status" role="status" aria-live="polite" aria-atomic="true" class="bl-sr-only">
</div>
<div class="bg-white/80 backdrop-blur-md border-b border-slate-200 shadow-sm shrink-0 z-10">
<div class="bl-app-header px-3 sm:px-6 py-3 sm:py-4 flex flex-wrap items-center justify-between gap-2">
<div class="flex items-center gap-3">
<div class="bg-gradient-to-br from-indigo-700 to-purple-700 p-2 rounded-xl text-white shadow-md">
<span class="lucide-icon" data-icon="Eye">
</span>
</div>
<div>
<h2 id="behavior-lens-dialog-title" class="text-xl font-black text-slate-800">BehaviorLens</h2>
<p id="behavior-lens-dialog-subtitle" class="text-xs text-slate-600">Behavioral Observation &amp; Analysis</p>
</div>
</div>
<button aria-label="Close BehaviorLens" class="shrink-0 ms-auto min-w-11 min-h-11 p-2 rounded-full text-slate-600 hover:bg-slate-100 transition-colors">
<span class="lucide-icon" data-icon="X">
</span>
</button>
<div class="w-full flex flex-wrap items-center gap-2">
<div class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border bg-slate-50 border-slate-200 text-slate-600" title="Canvas environment — local storage only">💾 Local only</div>
<button aria-label="AI is off — click to enable" aria-pressed="false" class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-slate-50 border-slate-300 text-slate-600 hover:bg-slate-100" title="AI OFF — no student data leaves this browser. Click to enable.">🤖 AI: OFF</button>
<button aria-label="Family Mode" aria-pressed="false" class="px-3 py-1.5 rounded-full text-xs font-bold transition-all border bg-white text-slate-600 border-slate-200 hover:border-blue-600 hover:text-blue-500">👨‍👩‍👧 Family</button>
</div>
</div>
</div>
<div data-bl-panel-content="true" tabindex="-1" class="flex-1 min-h-0 overflow-y-auto p-3 sm:p-6">
<div class="max-w-4xl mx-auto space-y-5" data-bl-today="true">
<nav aria-label="Behavior Lens workspace" class="flex flex-wrap gap-2 mb-5">
<button type="button" aria-current="page" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-indigo-100 text-indigo-900">Today</button>
<button type="button" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-white border border-slate-300 text-slate-700">All tools</button>
</nav>
<h2 class="text-xl font-bold text-slate-900">Choose a student to start</h2>
<div id="bl-today-setup">
<div class="mb-6 bg-white rounded-xl border border-slate-400 p-4 shadow-sm">
<label class="block text-xs font-bold text-slate-600 mb-2 uppercase tracking-wide">👤 Select Student</label>
<div class="flex items-center gap-2 mt-2 mb-1">
<span class="text-[11px] font-bold text-slate-600 uppercase tracking-wide">Your Role:</span>
<button aria-label="Use teacher view" aria-pressed="true" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-indigo-100 border-indigo-400 text-indigo-700">👩‍🏫 Teacher</button>
<button aria-label="Use family view" aria-pressed="false" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-white border-slate-200 text-slate-600 hover:border-slate-300">👪 Parent</button>
<button aria-label="Use specialist view" aria-pressed="false" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-white border-slate-200 text-slate-600 hover:border-slate-300">📊 BCBA / Specialist</button>
</div>
<div class="bg-indigo-50 p-4 rounded-xl border border-indigo-100">
<div class="flex gap-2 mb-3">
<select aria-label="Pick codename adjective" class="w-1/2 p-2 rounded-lg border border-indigo-600 text-indigo-900 font-bold text-sm focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer bg-white">
<option value="" selected="">— Adjective —</option>
</select>
<select aria-label="Pick codename animal" class="w-1/2 p-2 rounded-lg border border-indigo-600 text-indigo-900 font-bold text-sm focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer bg-white">
<option value="" selected="">— Animal —</option>
</select>
</div>
<div class="flex items-center justify-between bg-white p-3 rounded-xl shadow-sm border border-indigo-100">
<div class="text-xl font-black text-indigo-600 tracking-tight truncate me-2">Pick a codename...</div>
<button aria-label="Randomize Name" class="p-2 bg-indigo-100 text-indigo-800 rounded-full hover:bg-indigo-200 hover:scale-110 transition-all shrink-0" title="Randomize">🎲</button>
</div>
<details class="mt-4 pt-4 border-t border-indigo-100">
<summary class="min-h-11 py-2 text-sm font-bold text-indigo-900">Practice with sample data</summary>
<div class="flex items-center gap-1.5 mb-2">
<span class="text-[11px]">⚙️</span>
<span class="text-[11px] font-black text-indigo-700 uppercase tracking-wider">Sandbox Config</span>
</div>
<div class="grid grid-cols-2 gap-2 mb-3">
<div>
<label class="text-[11px] font-bold text-indigo-700 block mb-0.5">📅 Period</label>
<select aria-label="Sandbox period in days" class="w-full px-2 py-1.5 border border-indigo-600 rounded-lg text-xs bg-white text-indigo-800 font-medium">
<option value="7">7 days</option>
<option value="14" selected="">14 days</option>
<option value="30">30 days</option>
<option value="60">60 days</option>
<option value="90">90 days</option>
</select>
</div>
<div>
<label class="text-[11px] font-bold text-indigo-700 block mb-0.5">📝 Entries</label>
<select aria-label="Sandbox entry count" class="w-full px-2 py-1.5 border border-indigo-600 rounded-lg text-xs bg-white text-indigo-800 font-medium">
<option value="10">10 entries</option>
<option value="15">15 entries</option>
<option value="25" selected="">25 entries</option>
<option value="40">40 entries</option>
<option value="60">60 entries</option>
</select>
</div>
</div>
<button aria-label="Load Demo Student" class="w-full py-2.5 bg-gradient-to-r from-emerald-700 to-teal-700 hover:from-emerald-800 hover:to-teal-800 text-white rounded-xl font-bold text-sm shadow outline-none focus:ring-2 focus:ring-emerald-300 transition-all flex justify-center items-center gap-2">
<span>🚀</span>
<span>Load Demo (14d / 25 entries)</span>
</button>
</details>
</div>
</div>
</div>
<details class="rounded-xl border border-slate-300 bg-white p-4">
<summary class="min-h-11 py-2 text-sm font-bold text-slate-800">Workspace files and settings</summary>
<p role="status" class="text-sm text-slate-700 my-2">Changes save automatically in this browser. Download a backup to keep a file copy.</p>
<div class="flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Download backup</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Load workspace from file</button>
</div>
<input type="file" accept=".json" aria-label="Load BehaviorLens workspace JSON file" class="hidden"/>
</details>
<p class="text-sm text-slate-700">Find specialist tools, learning resources, and practice scenarios in All tools.</p>
</div>
</div>
</div>"
`;

exports[`layer 1 — Hub render across prop matrix > renders identically: with dashboardData populated (snapshot) 1`] = `
"<div class="bl-root fixed inset-0 z-[200] bg-slate-100 flex flex-col animate-in fade-in duration-300" role="dialog" aria-modal="true" aria-labelledby="behavior-lens-dialog-title" aria-describedby="behavior-lens-dialog-subtitle" tabindex="-1">
<div id="behavior-lens-live-status" role="status" aria-live="polite" aria-atomic="true" class="bl-sr-only">
</div>
<div class="bg-white/80 backdrop-blur-md border-b border-slate-200 shadow-sm shrink-0 z-10">
<div class="bl-app-header px-3 sm:px-6 py-3 sm:py-4 flex flex-wrap items-center justify-between gap-2">
<div class="flex items-center gap-3">
<div class="bg-gradient-to-br from-indigo-700 to-purple-700 p-2 rounded-xl text-white shadow-md">
<span class="lucide-icon" data-icon="Eye">
</span>
</div>
<div>
<h2 id="behavior-lens-dialog-title" class="text-xl font-black text-slate-800">BehaviorLens</h2>
<p id="behavior-lens-dialog-subtitle" class="text-xs text-slate-600">Behavioral Observation &amp; Analysis</p>
</div>
</div>
<button aria-label="Close BehaviorLens" class="shrink-0 ms-auto min-w-11 min-h-11 p-2 rounded-full text-slate-600 hover:bg-slate-100 transition-colors">
<span class="lucide-icon" data-icon="X">
</span>
</button>
<div class="w-full flex flex-wrap items-center gap-2">
<div class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border bg-slate-50 border-slate-200 text-slate-600" title="Canvas environment — local storage only">💾 Local only</div>
<button aria-label="AI is off — click to enable" aria-pressed="false" class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-slate-50 border-slate-300 text-slate-600 hover:bg-slate-100" title="AI OFF — no student data leaves this browser. Click to enable.">🤖 AI: OFF</button>
<button aria-label="Family Mode" aria-pressed="false" class="px-3 py-1.5 rounded-full text-xs font-bold transition-all border bg-white text-slate-600 border-slate-200 hover:border-blue-600 hover:text-blue-500">👨‍👩‍👧 Family</button>
</div>
</div>
</div>
<div data-bl-panel-content="true" tabindex="-1" class="flex-1 min-h-0 overflow-y-auto p-3 sm:p-6">
<div class="max-w-4xl mx-auto space-y-5" data-bl-today="true">
<nav aria-label="Behavior Lens workspace" class="flex flex-wrap gap-2 mb-5">
<button type="button" aria-current="page" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-indigo-100 text-indigo-900">Today</button>
<button type="button" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-white border border-slate-300 text-slate-700">All tools</button>
</nav>
<h2 class="text-xl font-bold text-slate-900">Choose a student to start</h2>
<div id="bl-today-setup">
<div class="mb-6 bg-white rounded-xl border border-slate-400 p-4 shadow-sm">
<label class="block text-xs font-bold text-slate-600 mb-2 uppercase tracking-wide">👤 Select Student</label>
<div class="flex items-center gap-2 mt-2 mb-1">
<span class="text-[11px] font-bold text-slate-600 uppercase tracking-wide">Your Role:</span>
<button aria-label="Use teacher view" aria-pressed="false" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-white border-slate-200 text-slate-600 hover:border-slate-300">👩‍🏫 Teacher</button>
<button aria-label="Use family view" aria-pressed="true" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-emerald-100 border-emerald-400 text-emerald-700">👪 Parent</button>
<button aria-label="Use specialist view" aria-pressed="false" class="px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-white border-slate-200 text-slate-600 hover:border-slate-300">📊 BCBA / Specialist</button>
</div>
<div class="bg-indigo-50 p-4 rounded-xl border border-indigo-100">
<div class="flex gap-2 mb-3">
<select aria-label="Pick codename adjective" class="w-1/2 p-2 rounded-lg border border-indigo-600 text-indigo-900 font-bold text-sm focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer bg-white">
<option value="" selected="">— Adjective —</option>
</select>
<select aria-label="Pick codename animal" class="w-1/2 p-2 rounded-lg border border-indigo-600 text-indigo-900 font-bold text-sm focus:ring-2 focus:ring-indigo-400 outline-none cursor-pointer bg-white">
<option value="" selected="">— Animal —</option>
</select>
</div>
<div class="flex items-center justify-between bg-white p-3 rounded-xl shadow-sm border border-indigo-100">
<div class="text-xl font-black text-indigo-600 tracking-tight truncate me-2">Pick a codename...</div>
<button aria-label="Randomize Name" class="p-2 bg-indigo-100 text-indigo-800 rounded-full hover:bg-indigo-200 hover:scale-110 transition-all shrink-0" title="Randomize">🎲</button>
</div>
<details class="mt-4 pt-4 border-t border-indigo-100">
<summary class="min-h-11 py-2 text-sm font-bold text-indigo-900">Practice with sample data</summary>
<div class="flex items-center gap-1.5 mb-2">
<span class="text-[11px]">⚙️</span>
<span class="text-[11px] font-black text-indigo-700 uppercase tracking-wider">Sandbox Config</span>
</div>
<div class="grid grid-cols-2 gap-2 mb-3">
<div>
<label class="text-[11px] font-bold text-indigo-700 block mb-0.5">📅 Period</label>
<select aria-label="Sandbox period in days" class="w-full px-2 py-1.5 border border-indigo-600 rounded-lg text-xs bg-white text-indigo-800 font-medium">
<option value="7">7 days</option>
<option value="14" selected="">14 days</option>
<option value="30">30 days</option>
<option value="60">60 days</option>
<option value="90">90 days</option>
</select>
</div>
<div>
<label class="text-[11px] font-bold text-indigo-700 block mb-0.5">📝 Entries</label>
<select aria-label="Sandbox entry count" class="w-full px-2 py-1.5 border border-indigo-600 rounded-lg text-xs bg-white text-indigo-800 font-medium">
<option value="10">10 entries</option>
<option value="15">15 entries</option>
<option value="25" selected="">25 entries</option>
<option value="40">40 entries</option>
<option value="60">60 entries</option>
</select>
</div>
</div>
<button aria-label="Load Demo Student" class="w-full py-2.5 bg-gradient-to-r from-emerald-700 to-teal-700 hover:from-emerald-800 hover:to-teal-800 text-white rounded-xl font-bold text-sm shadow outline-none focus:ring-2 focus:ring-emerald-300 transition-all flex justify-center items-center gap-2">
<span>🚀</span>
<span>Load Demo (14d / 25 entries)</span>
</button>
</details>
</div>
</div>
</div>
<details class="rounded-xl border border-slate-300 bg-white p-4">
<summary class="min-h-11 py-2 text-sm font-bold text-slate-800">Workspace files and settings</summary>
<p role="status" class="text-sm text-slate-700 my-2">Changes save automatically in this browser. Download a backup to keep a file copy.</p>
<div class="flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Download backup</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Load workspace from file</button>
</div>
<input type="file" accept=".json" aria-label="Load BehaviorLens workspace JSON file" class="hidden"/>
</details>
<p class="text-sm text-slate-700">Find specialist tools, learning resources, and practice scenarios in All tools.</p>
</div>
</div>
</div>"
`;

exports[`layer 1 — Hub render across prop matrix > renders identically: with studentNickname set (snapshot) 1`] = `
"<div class="bl-root fixed inset-0 z-[200] bg-slate-100 flex flex-col animate-in fade-in duration-300" role="dialog" aria-modal="true" aria-labelledby="behavior-lens-dialog-title" aria-describedby="behavior-lens-dialog-subtitle" tabindex="-1">
<div id="behavior-lens-live-status" role="status" aria-live="polite" aria-atomic="true" class="bl-sr-only">
</div>
<div class="bg-white/80 backdrop-blur-md border-b border-slate-200 shadow-sm shrink-0 z-10">
<div class="bl-app-header px-3 sm:px-6 py-3 sm:py-4 flex flex-wrap items-center justify-between gap-2">
<div class="flex items-center gap-3">
<div class="bg-gradient-to-br from-indigo-700 to-purple-700 p-2 rounded-xl text-white shadow-md">
<span class="lucide-icon" data-icon="Eye">
</span>
</div>
<div>
<h2 id="behavior-lens-dialog-title" class="text-xl font-black text-slate-800">BehaviorLens</h2>
<p id="behavior-lens-dialog-subtitle" class="text-xs text-slate-600">Behavioral Observation &amp; Analysis</p>
</div>
</div>
<button aria-label="Close BehaviorLens" class="shrink-0 ms-auto min-w-11 min-h-11 p-2 rounded-full text-slate-600 hover:bg-slate-100 transition-colors">
<span class="lucide-icon" data-icon="X">
</span>
</button>
<div class="w-full flex flex-wrap items-center gap-2">
<div class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border bg-slate-50 border-slate-200 text-slate-600" title="Canvas environment — local storage only">💾 Local only</div>
<button aria-label="AI is off — click to enable" aria-pressed="false" class="flex items-center gap-1.5 px-2.5 py-1 rounded-full text-[11px] font-bold border-2 transition-all bg-slate-50 border-slate-300 text-slate-600 hover:bg-slate-100" title="AI OFF — no student data leaves this browser. Click to enable.">🤖 AI: OFF</button>
<button aria-label="Family Mode" aria-pressed="false" class="px-3 py-1.5 rounded-full text-xs font-bold transition-all border bg-white text-slate-600 border-slate-200 hover:border-blue-600 hover:text-blue-500">👨‍👩‍👧 Family</button>
</div>
</div>
</div>
<div data-bl-panel-content="true" tabindex="-1" class="flex-1 min-h-0 overflow-y-auto p-3 sm:p-6">
<div class="max-w-4xl mx-auto space-y-5" data-bl-today="true">
<nav aria-label="Behavior Lens workspace" class="flex flex-wrap gap-2 mb-5">
<button type="button" aria-current="page" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-indigo-100 text-indigo-900">Today</button>
<button type="button" class="min-h-11 rounded-lg px-4 py-2 text-sm font-bold bg-white border border-slate-300 text-slate-700">All tools</button>
</nav>
<header class="flex flex-wrap items-end justify-between gap-3">
<div>
<p class="text-sm text-slate-700">Student workspace</p>
<h2 class="text-2xl font-bold text-slate-900">Eagle</h2>
</div>
<div class="flex flex-wrap gap-2 items-end">
<button type="button" aria-expanded="false" aria-controls="bl-today-setup" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Student and role settings</button>
</div>
</header>
<section class="rounded-xl border border-indigo-300 bg-indigo-50 p-4 sm:p-5 space-y-3" aria-labelledby="bl-getting-started" data-bl-getting-started="true">
<div class="flex flex-wrap items-center justify-between gap-2">
<h3 id="bl-getting-started" class="text-lg font-bold text-indigo-950">Start with one observation</h3>
<button type="button" class="min-h-11 px-2 text-sm text-indigo-900 underline">Skip guide</button>
</div>
<p class="text-sm text-indigo-950" role="status">1. Student selected · 2. Add data · 3. Preview your review</p>
<p class="text-sm text-indigo-950">A context note captures what happened before, what you observed, and what happened after. No target setup or AI is required.</p>
<div class="flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-indigo-400 bg-white px-4 py-2 text-sm font-bold text-indigo-900">Record an observation</button>
<button type="button" class="min-h-11 rounded-lg border border-indigo-400 bg-white px-4 py-2 text-sm font-bold text-indigo-900">Import existing data</button>
<button type="button" class="min-h-11 rounded-lg border border-indigo-400 bg-white px-4 py-2 text-sm font-bold text-indigo-900">Explore an example</button>
</div>
<p class="text-sm text-indigo-950">For systematic measurement, define a target below: count how often, time how long, time from a cue, or sample intervals. Example data opens in a separate practice workspace.</p>
</section>
<section class="rounded-xl border border-slate-300 bg-white p-4 sm:p-5" aria-labelledby="bl-today-record">
<h3 id="bl-today-record" class="text-lg font-bold text-slate-900">Record what happened today</h3>
<p class="mt-2 text-sm text-slate-700">Capture what you saw and heard. You can review patterns and possible explanations later.</p>
<div class="mt-4 flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg bg-indigo-700 px-4 py-2 text-sm font-bold text-white hover:bg-indigo-800">Add observation</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Start or resume timed observation</button>
</div>
<p class="mt-3 text-sm text-slate-700">Timed recording also lets you resume a saved recording draft.</p>
</section>
<section class="rounded-xl border border-slate-300 bg-white p-4 sm:p-5" aria-labelledby="bl-today-targets">
<div class="flex flex-col sm:flex-row sm:items-start justify-between gap-3">
<div class="min-w-0 flex-1">
<h3 id="bl-today-targets" class="text-base font-bold text-slate-900">What are you observing?</h3>
<p class="mt-1 text-sm text-slate-700 break-words">Define a target once, then use it in observations and review.</p>
</div>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Define a target</button>
</div>
</section>
<section class="rounded-xl border border-slate-300 bg-white p-4 sm:p-5" aria-labelledby="bl-today-review">
<div class="flex flex-wrap items-center justify-between gap-3">
<h3 id="bl-today-review" class="text-base font-bold text-slate-900">Review and follow through</h3>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Review observations</button>
</div>
<p class="mt-2 text-sm text-slate-700">Your observations will appear here. A context note is a useful place to start.</p>
<div class="mt-4 flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Work on a support plan</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Prepare a progress review</button>
</div>
</section>
<details class="rounded-xl border border-slate-300 bg-white p-4">
<summary class="min-h-11 py-2 text-sm font-bold text-slate-800">Workspace files and settings</summary>
<p role="status" class="text-sm text-slate-700 my-2">Changes save automatically in this browser. Download a backup to keep a file copy.</p>
<div class="flex flex-wrap gap-2">
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Download backup</button>
<button type="button" class="min-h-11 rounded-lg border border-slate-400 bg-white px-4 py-2 text-sm font-bold text-slate-800 hover:bg-slate-50">Load workspace from file</button>
</div>
<input type="file" accept=".json" aria-label="Load BehaviorLens workspace JSON file" class="hidden"/>
</details>
<p class="text-sm text-slate-700">Find specialist tools, learning resources, and practice scenarios in All tools.</p>
</div>
</div>
</div>"
`;
